# C-Recepteskonyv

./: CMakeLists.txt  README.md  adatszerkezet.h  dummyrecept.txt  fajlkezelo.c  fajlkezelo.h  main.c  menu.c  menu.h  osszetevok.c  osszetevok.h  receptek.c  receptek.h
